# planewar

./: pyproject.toml
PythonProject/: main.py  pyproject.toml
PythonProject/aicraftbattle.egg-info/: PKG-INFO  SOURCES.txt
src/planewar/: main.py
