[project]
name = "planewar"
version = "0.1.0"
description = ""
authors = [
    {name = "shenley",email = "582783985@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]

[tool.poetry]
package-mode = false
packages = [{include = "planewar", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
